--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "gatsby-plugin-react-helmet": "^3.3.13",
     "gatsby-plugin-sass": "^2.3.16",
     "gatsby-plugin-sharp": "^2.6.39",
+    "gatsby-plugin-typescript": "^2.4.21",
     "gatsby-source-filesystem": "^2.3.33",
     "gatsby-transformer-sharp": "^2.5.17",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "gatsby"
@@ -29,9 +31,17 @@
     "develop-docker": "concurrently --kill-others \"gatsby develop -H 0.0.0.0\"",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run type-check && npm run lint",
+    "lint": "eslint . --ext ts --ext tsx'",
+    "type-check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^14.11.5",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^1.19.1"
   },
   "repository": {
