--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@types/node": "^14.11.5",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.3",
     "prettier": "^1.19.1"
   },
   "repository": {
