--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
         "module": "commonjs",
         "target": "esnext",
         "jsx": "react",
-        "lib": ["dom", "esnext"]
+        "lib": ["dom", "esnext"],
+        "baseUrl": "./",
+        "paths": {
+            "@components/*": ["src/components/*"]
+        }
     },
     "include": [
         "./src/**/*"
