--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "seandolinar-site",
+  "description": "Resume site",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Sean Dolinar",
   "dependencies": {
-    "gatsby": "^2.24.69",
+    "gatsby": "^2.24.86-ink-compiled.12",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.3.13",
-    "gatsby-plugin-sass": "^2.3.16",
-    "gatsby-plugin-sharp": "^2.6.39",
-    "gatsby-plugin-typescript": "^2.4.21",
-    "gatsby-source-filesystem": "^2.3.33",
-    "gatsby-transformer-sharp": "^2.5.17",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.3.21",
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-typescript": "^2.4.24",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-transformer-sharp": "^2.5.19",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
     "typescript": "^4.0.3"
   },
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "develop-docker": "concurrently --kill-others \"gatsby develop -H 0.0.0.0\"",
+    "develop-docker": "gatsby develop -H 0.0.0.0",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "npm run type-check && npm run lint",
@@ -36,14 +36,14 @@
     "type-check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
-    "@types/node": "^14.11.5",
-    "@types/react": "^16.9.51",
+    "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.12.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react": "^7.21.5",
     "prettier": "^1.19.1"
   },
   "repository": {
